# SegAuditSegCI

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE.txt  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml  softwarex-checklist-guard.yml
docs/: SOFTWAREX_CHECKLIST.md  SOFTWAREX_REQUIREMENTS.md
docs/design/changes/: pr02-core-contracts-schemas.md
repo/src/segaudit/: __init__.py  cli.py
repo/src/segaudit/core/: __init__.py  drift_runner.py  eval_runner.py  gate_runner.py  report_runner.py  types.py
repo/src/segaudit/domains/: __init__.py  registry.py
repo/src/segaudit/domains/adas_pack/: __init__.py  drift.py  report_cards.py  slices.py
repo/src/segaudit/domains/industrial_pack/: __init__.py  drift.py  gates_default.yaml  report_cards.py  slices.py
repo/src/segaudit/domains/medical_pack/: __init__.py  drift.py  report_cards.py  slices.py
repo/src/segaudit/drift/: __init__.py  baseline.py  detectors.py  signals.py
repo/src/segaudit/gates/: __init__.py  evaluator.py  spec.py
repo/src/segaudit/io/: coco_rle.py  folder_masks.py  lidar_range.py  registry.py  volume_nifti.py
repo/src/segaudit/metrics/: __init__.py  boundary.py  calibration.py  semantic.py
repo/src/segaudit/report/: __init__.py  artifacts.py  render_html.py  schema.py
repo/src/segaudit/slices/: __init__.py  base.py  objects.py
repo/src/segaudit/utils/: image.py  parallel.py
repo/tests/: test_cli.py  test_core_types.py  test_schema_models.py
