[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "segaudit"
version = "0.1.0"
description = "CI-grade quality platform for segmentation systems."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE.txt" }
authors = [{ name = "SegAudit contributors" }]
keywords = ["segmentation", "mlops", "ci", "drift", "evaluation"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
segaudit = "segaudit.cli:main"

[tool.setuptools]
package-dir = { "" = "repo/src" }

[tool.setuptools.packages.find]
where = ["repo/src"]

[tool.pytest.ini_options]
testpaths = ["repo/tests"]
addopts = "-q"
